--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,9 +114,6 @@
     "## Create output directories if they don't exist\n",
     "os.makedirs(extracted_data_dir, exist_ok=True)\n",
     "\n",
-    "## List to store tuples of (DataFrame, file_type, file_name)\n",
-    "dataframe_infos = []\n",
-    "\n",
     "## Extract data from all files\n",
     "for file_path in mDM.iter_filepaths(DATA_dir):\n",
     "    file_name = os.path.basename(file_path)\n",
@@ -127,7 +124,7 @@
     "        if ext.lower() == '.txt':\n",
     "            df = mDM.extract_dataframe_from_txt(file_path, _encoding='cp1252')\n",
     "            print(f\"Successfully extracted from text file: {file_name}\")\n",
-    "        elif ext.lower() in ['.xls', '.xlsx']:\n",
+    "        elif ext.lower() in ['.xls', '.xlsx', '.csv']:\n",
     "            df = mDM.extract_dataframe_from_excel(file_path)\n",
     "            print(f\"Successfully extracted from Excel file: {file_name}\")\n",
     "        else:\n",
@@ -153,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1458,10 +1455,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully extracted from Excel file: ar_1991.xls\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'DATA FILES/Source_Data/ar_1991.xls'\n",
+    "file_name = os.path.basename(file_path)\n",
+    "base_name, ext = os.path.splitext(file_name)\n",
+    "if ext.lower() == '.txt':\n",
+    "    print(f\"Successfully extracted from text file: {file_name}\")\n",
+    "elif ext.lower() in ['.xls', '.xlsx', '.csv']:\n",
+    "    print(f\"Successfully extracted from Excel file: {file_name}\")\n",
+    "else:\n",
+    "    print(f\"Skipping unsupported file: {file_name}\")"
+   ]
   }
  ],
  "metadata": {
