small fix on table column
ar_2011 had portguese characters that certain engines and frameworks or languages can't interpret
now resolved

--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -141,6 +141,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully saved ar_2011.xlsx to ./DATA FILES/Extracted_Data\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "## small fix to one column of the dataframe from ar_2011.xlsx\n",
+    "\n",
+    "data_dir= './DATA FILES/Extracted_Data/'\n",
+    "path_2011 = os.path.join(data_dir, 'ar_2011.xlsx')\n",
+    "## replacing Portuguese characters with simplified ones\n",
+    "df_2011 = mDM.extract_dataframe_from_excel(path_2011)\n",
+    "df_2011.rename(columns={'DESIGNAÇÃO': 'DESIGNACAO'}, inplace=True)\n",
+    "mDM.save_dataframe_to_excel(df_2011, path_2011, _replace=True)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1308,7 @@
       " #   Column      Non-Null Count  Dtype  \n",
       "---  ------      --------------  -----  \n",
       " 0   CODIGO      390 non-null    int64  \n",
-      " 1   DESIGNAÇÃO  390 non-null    object \n",
+      " 1   DESIGNACAO  390 non-null    object \n",
       " 2   T_ELEI      390 non-null    object \n",
       " 3   D_ELEI      390 non-null    object \n",
       " 4   SIGLA       390 non-null    object \n",
@@ -1353,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1437,7 @@
     "        except Exception as e:\n",
     "            print(f\"Error extracting dataframe from {file_path}: {e}\")\n",
     "            continue\n",
-    "\n",
+    "        \n",
     "        ## Clean the DataFrame using parse_1, then parse_2 functions, in that order\n",
     "        cleaned_df = mDM.parse_FC_data_1(df)\n",
     "        cleaned_df = mDM.parse_FC_data_2(cleaned_df)\n",
