--- a/main_Load.ipynb
+++ b/main_Load.ipynb
@@ -10,12 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import os\n",
     "from myDataMethods import iter_filepaths\n",
     "from mySequelMethods import generate_ddl_from_excel, save_sql_script"
@@ -30,38 +28,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully saved ar76c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar76f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar79c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar79f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar80c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar80f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar83c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar83f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar85c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar85f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar87c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar87f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar91c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar91f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar95c.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar95f.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1975_constituinte.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1976.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1979_intercalar.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1980.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1983.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1985.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1987.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1991.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1995.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_1999.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_2002.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_2005.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_2009.sql to ./SQL_scripts/ddl-dml/\n",
+      "Successfully saved ar_2011.sql to ./SQL_scripts/ddl-dml/\n"
+     ]
+    }
+   ],
    "source": [
     "## Directory containing the data files\n",
-    "data_dir = './Data_Selected'\n",
-    "output_dir = './sql_scripts/ddl-dml/'\n",
+    "data_dir = './DATA FILES/Cleaned_Data/'\n",
+    "output_dir = './SQL_scripts/ddl-dml/'\n",
     "\n",
     "## Create the output directory if it doesn't exist\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
     "\n",
-    "## Loop through every file in the data directory using the iter_file_paths function\n",
+    "## Loop through every file in the data directory using iter_filepaths\n",
     "for file_path in iter_filepaths(data_dir):\n",
     "    file_name = os.path.basename(file_path)\n",
     "    \n",
-    "    ## Process the file using your SQL DDL function\n",
+    "    ## Process the file using the SQL DDL generation function\n",
     "    try:\n",
     "        _, sql_script = generate_ddl_from_excel(file_path)\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {file_name}: {e}\")\n",
     "        continue\n",
     "    \n",
-    "    ## Build the output file name based on the original file's name\n",
-    "    base_name, _ = os.path.splitext(file_name)\n",
-    "    output_file = os.path.join(output_dir, base_name + '.sql')\n",
-    "    \n",
-    "    ## Write the generated SQL script to the output file\n",
-    "    with open(output_file, 'w') as f:\n",
-    "        f.write(sql_script)\n",
-    "    \n",
-    "    print(f\"SQL script for {file_name} saved to {output_file}\")\n"
+    "    ## Save the SQL script using the custom function (the file name is derived from the script)\n",
+    "    save_sql_script(sql_script, output_dir)\n"
    ]
   },
   {
@@ -71,6 +99,15 @@
     "---\n",
     "\n",
     "### cells below are explicitly for testing / debugging purposes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## tests"
    ]
   }
  ],
