post-delivery maintenance
not 100% tested, but stable

--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
     "        ## Export the DataFrame to Excel\n",
     "        output_path = os.path.join(extracted_data_dir, f\"{base_name}.xlsx\")\n",
     "        mDM.save_dataframe_to_excel(df, output_path)\n",
-    "        \n",
+    "    \n",
     "    ## Handle specific exceptions for parsing\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {file_name}: {e}\")\n"
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,8 @@
     "            shutil.copy(source_file, target_file)\n",
     "            print(f\"Copied file {source_file} to {target_file}\")\n",
     "        except Exception as e:\n",
-    "            print(f\"Error copying file {source_file}: {e}\")"
+    "            print(f\"Error copying file {source_file}: {e}\")\n",
+    "    "
    ]
   },
   {
