--- a/main_server.ipynb
+++ b/main_server.ipynb
@@ -33,10 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "## get server login details\n",
     "server_user = input(f'Enter username: ')\n",
     "server_pass = input(f'Enter password: ')\n",
@@ -52,12 +53,19 @@
     "\n",
     "## Connect to the database\n",
     "conn = psycopg2.connect(**DB_CONFIG)\n",
-    "cur = conn.cursor()"
+    "cur = conn.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running the SQL scripts within the server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +139,9 @@
     }
    ],
    "source": [
-    "# run SQL files\n",
-    "sql_dir = './sql_scripts/ddl-dml/'  # Directory containing SQL files\n",
+    "\n",
+    "## Destination directory for SQL files\n",
+    "sql_dir = './sql_scripts/ddl-dml/'\n",
     "for sql_file in iter_filepaths(sql_dir):\n",
     "    try:\n",
     "        run_sql_in_server(sql_file, cur)\n",
@@ -140,7 +149,8 @@
     "        conn.commit()\n",
     "    except Exception as e:\n",
     "        print(f\"Error executing {sql_file}: {str(e)}\")\n",
-    "        conn.rollback()"
+    "        conn.rollback()\n",
+    "    "
    ]
   },
   {
