--- a/main_Extract.ipynb
+++ b/main_Extract.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,6 +1468,30 @@
     "        except Exception as e:\n",
     "            print(f\"Error copying file {source_file}: {e}\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of records across all used data: 40574\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "## This code allows us to compute the total number of rows across all data\n",
+    "test_dir = './DATA FILES/Cleaned_Data/'\n",
+    "num_records = 0\n",
+    "for path in mDM.iter_filepaths(test_dir):\n",
+    "    df = mDM.extract_dataframe_from_excel(path)\n",
+    "    num_records += len(df)\n",
+    "print(f\"Number of records across all used data: {num_records}\")\n"
    ]
   },
   {
